--- a/index.html
+++ b/index.html
@@ -58,28 +58,28 @@
             <div class="grid_portfolio" style="perspective-origin: 50% 1818px;">
                 <div class="row grid" id="grid">
                     <figure class="one" data-item-id="1" style="width: 317px; display: inline-block;">
-                        <img src="/Users/AenigmaStudio/desktop/work1web/images/blabber.jpg" alt="img">
+                        <img src="https://github.com/znafu/work1web/blob/master/images/blabber.jpg?raw=true" alt="img">
                     </figure>
                     <figure class="two" data-item-id="2" style="width: 317px; display: inline-block;">
-                        <img src="/Users/AenigmaStudio/desktop/work1web/images/rare1.jpg" alt="img">
+                        <img src="https://github.com/znafu/work1web/blob/master/images/hijo.jpg?raw=true" alt="img">
                     </figure>
                     <figure class="three" data-item-id="3" style="width: 317px; display: inline-block;">
-                        <img src="/Users/AenigmaStudio/desktop/work1web/images/hijo.jpg" alt="img">
+                        <img src="https://github.com/znafu/work1web/blob/master/images/jii.jpg?raw=true" alt="img">
                     </figure>
                     <figure class="four" data-item-id="4" style="width: 317px; display: inline-block;">
-                        <img src="/Users/AenigmaStudio/desktop/work1web/images/jii.jpg" alt="img">
+                        <img src="https://github.com/znafu/work1web/blob/master/images/rare1.jpg?raw=true" alt="img">
                     </figure>
                     <figure class="five" data-item-id="5" style="width: 317px; display: inline-block;">
-                        <img src="/Users/AenigmaStudio/desktop/work1web/images/zh.jpg" alt="img">
+                        <img src="https://github.com/znafu/work1web/blob/master/images/sk.jpg?raw=true" alt="img">
                     </figure>
                     <figure class="six" data-item-id="3" style="width: 317px; display: inline-block;">
-                        <img src="/Users/AenigmaStudio/desktop/work1web/images/viki.jpg" alt="img">
+                        <img src="https://github.com/znafu/work1web/blob/master/images/zh.jpg?raw=true" alt="img">
                     </figure>
                     <figure class="seven" data-item-id="2" style="width: 317px; display: inline-block;">
-                        <img src="/Users/AenigmaStudio/desktop/work1web/images/zh2.jpg" alt="img">
+                        <img src="https://github.com/znafu/work1web/blob/master/images/viki.jpg?raw=true" alt="img">
                     </figure>
                     <figure class="eight" data-item-id="1" style="width: 317px; display: inline-block;">
-                        <img src="/Users/AenigmaStudio/desktop/work1web/images/sk.jpg" alt="img">
+                        <img src="https://raw.githubusercontent.com/znafu/work1web/master/images/zh2.jpg" alt="img">
                     </figure>
                 </div>
             </div>
