--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="site-logo">
                 <h1 id="logo">
 							 <a class="logo_link" href="">
-						    <img src="/Users/AenigmaStudio/desktop/work1web/images/tag1.png">
+						    <img src="https://github.com/znafu/work1web/blob/master/images/tag1.png?raw=true">
 							 </a>
 						</h1>
             </div>
