--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
     <section id="aboutme" class="section-bg-color">
         <div class="section_inner">
             <h2 class="title_about">ABOUT US</h2>
-            <div class="aboutme-description">Globe Fusce venenatis, enim eu mollis imperdiet, lorem est fermentum tellus, sed ornare sem velit at metus. Sed id elit feugiat, lacinia augue nec, mattis nunc. Sed vestibulum mollis eros et fermentum. Duis lacinia nunc ut eros ullamcorper,
-                nec tempus risus cursus. Mauris sagittis velit et leo vehicula, a tristique urna congue. Curabitur vehicula fringilla eros ac rutrum. Mauris lobortis lobortis placerat. In porttitor varius nisi</div>
+            <div class="aboutme-description">"Soy un diseñador gráfico apasionado por el color, las tipografías, las formas, la ilustración etc." Versatilidad e innovación ... es la característica que define mi esencia creativa, transformando mi sentido de apreciación estética, imaginación y originalidad en un estímulo para el desarrollo de mis piezas.</div>
         </div>
     </section>
 
