--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
     <!--Sección uno "about me"-->
     <section id="aboutme" class="section-bg-color">
         <div class="section_inner">
-            <h2 class="title_about">ABOUT US</h2>
-            <div class="aboutme-description">"Soy un diseñador gráfico apasionado por el color, las tipografías, las formas, la ilustración etc." Versatilidad e innovación ... es la característica que define mi esencia creativa, transformando mi sentido de apreciación estética, imaginación y originalidad en un estímulo para el desarrollo de mis piezas.</div>
+            <h2 class="title_about">ABOUT ME</h2>
+            <div class="aboutme-description">"Soy un diseñador gráfico apasionado por el color, las tipografías, las formas, la ilustración etc." Versatilidad e innovación ... es la característica que define mi esencia creativa, transformando mi sentido de apreciación estética, imaginación
+                y originalidad en un estímulo para el desarrollo de mis piezas.</div>
         </div>
     </section>
 
